--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <iframe
-      src="https://www.youtube.com/embed/j7w0dmAHR6I?enablejsapi=1"
+      src="https://www.youtube.com/embed/j7w0dmAHR6I?enablejsapi=1&autoplay=1&controls=0&fs=0&modestbranding=1&playsinline=1&rel=0"
       frameborder="0"
     ></iframe>
   </body>
