--- a/index.html
+++ b/index.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>아이프레임을 최적화 해보자</title>
-  </head>
-  <body>
-    <iframe
-      src="https://www.youtube.com/embed/j7w0dmAHR6I?enablejsapi=1&autoplay=1&controls=0&fs=0&modestbranding=1&playsinline=1&rel=0"
-      frameborder="0"
-    ></iframe>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>아이프레임을 최적화 해보자</title>
+        <style>
+            * {
+                margin: 0;
+                border: 0;
+                padding: 0;
+            }
+            body {
+                position: relative;
+                width: 100%;
+                padding-bottom: 56.25%;
+            }
+            iframe {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+            }
+            .youtubeButton {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 1;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="youtubeButton"></div>
+        <iframe
+            class="video"
+            src="https://www.youtube.com/embed/j7w0dmAHR6I"
+            frameborder="0"
+        ></iframe>
+
+        <script>
+            (function() {
+                const btnYoutube = document.querySelector('.youtubeButton');
+                const youtubeIframe = document.querySelector('.video');
+                let youtubeSwitch = 0;
+
+                function youtubePlay() {
+                    if (youtubeIframe !== null && youtubeSwitch == 0) {
+                        youtubeSwitch = 1;
+                        youtubeIframe.src =
+                            'https://www.youtube.com/embed/j7w0dmAHR6I?enablejsapi=1&controls=0&autoplay=1&fs=0&modestbranding=1&playsinline=1&rel=0';
+                    } else {
+                        youtubeSwitch = 0;
+                        youtubeIframe.src =
+                            'https://www.youtube.com/embed/j7w0dmAHR6I';
+                    }
+                }
+
+                btnYoutube.addEventListener('click', youtubePlay);
+            })();
+        </script>
+    </body>
 </html>
