--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     }
                 }
 
-                btnYoutube.addEventListener('click', youtubePlay);
+                btnYoutube.addEventListener('touchstart', youtubePlay);
 
                 // log
                 function formatDate(date) {
