--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
                 let dateFormat = formatDate(date);
 
                 document.querySelector('.log').innerHTML = 'log: ' + dateFormat;
+                document.querySelector('.log').style.filter =
+                    'hue-rotate(' + date.getSeconds() + 'rad)';
             })();
         </script>
     </body>
