--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
                         youtubeIframe !== null &&
                         !youtubeIframe.getAttribute('src').includes('autoplay')
                     ) {
-                        youtubeIframe.src =
-                            'https://www.youtube.com/embed/j7w0dmAHR6I?enablejsapi=1&controls=0&autoplay=1&fs=0&modestbranding=1&playsinline=1&rel=0';
+                        setTimeout(function() {
+                            youtubeIframe.src =
+                                'https://www.youtube.com/embed/j7w0dmAHR6I?enablejsapi=1&controls=0&autoplay=1&mute=1&fs=0&modestbranding=1&playsinline=1&rel=0';
+                        }, 100);
                     } else {
                         youtubeIframe.src =
                             'https://www.youtube.com/embed/j7w0dmAHR6I';
