--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
                 width: 100%;
                 padding-bottom: 56.25%;
             }
-            iframe {
+            .youtubePlayer {
                 position: absolute;
                 left: 0;
                 top: 0;
+                width: 100%;
+                height: 100%;
+            }
+            .youtubePlayer iframe {
                 width: 100%;
                 height: 100%;
             }
@@ -33,82 +37,73 @@
                 height: 100%;
                 z-index: 1;
             }
-            /* log */
-            .log {
-                display: block;
-                margin: 30px;
-                color: #187690e3;
-                font-size: 30px;
-            }
         </style>
     </head>
     <body>
         <div class="wrap">
             <div class="youtubeWrap">
                 <div class="youtubeButton"></div>
-                <iframe
-                    class="video"
-                    src="https://www.youtube.com/embed/j7w0dmAHR6I"
-                    frameborder="0"
-                ></iframe>
+                <div class="youtubePlayer">
+                    <iframe
+                        width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/muSW5UcfstM"
+                        frameborder="0"
+                    ></iframe>
+                </div>
             </div>
         </div>
 
-        <div class="log"></div>
+        <script id="forYoutubeApi">
+            'use strict';
 
-        <script>
-            (function() {
-                const btnYoutube = document.querySelector('.youtubeButton');
-                const youtubeIframe = document.querySelector('.video');
+            const _$btnYoutube = document.querySelector('.youtubeButton');
+            const _$youtubeIframe = document.querySelector('.youtubePlayer');
 
-                function youtubePlay() {
-                    if (
-                        youtubeIframe !== null &&
-                        !youtubeIframe.getAttribute('src').includes('autoplay')
-                    ) {
-                        setTimeout(function() {
-                            youtubeIframe.src =
-                                'https://www.youtube.com/embed/j7w0dmAHR6I?enablejsapi=1&controls=0&autoplay=1&fs=0&modestbranding=1&playsinline=1&rel=0';
-                        }, 100);
-                    } else {
-                        youtubeIframe.src =
-                            'https://www.youtube.com/embed/j7w0dmAHR6I';
-                    }
+            let _$scriptTag = document.createElement('script');
+            let _$insertScript = document.getElementById('forYoutubeApi');
+
+            let _player;
+            let _done = false;
+
+            // youtube api
+            function onYouTubeIframeAPIReady() {
+                player = new YT.Player('player', {
+                    height: '390',
+                    width: '640',
+                    videoId: 'M7lc1UVf-VE',
+                    events: {
+                        onReady: onPlayerReady,
+                        onStateChange: onPlayerStateChange,
+                    },
+                });
+            }
+
+            function onPlayerReady(event) {
+                event.target.playVideo();
+            }
+
+            function onPlayerStateChange(event) {
+                if (event.data == YT.PlayerState.PLAYING && !done) {
+                    setTimeout(stopVideo, 6000);
+                    done = true;
                 }
+            }
 
-                btnYoutube.addEventListener('touchstart', youtubePlay);
+            function stopVideo() {
+                player.stopVideo();
+            }
 
-                // log
-                function formatDate(date) {
-                    let hours = date.getHours();
-                    let minutes = date.getMinutes();
-                    let seconds = date.getSeconds();
-                    let ampm = hours >= 12 ? 'pm' : 'am';
-                    hours = hours % 12;
-                    hours = hours ? hours : 12;
-                    minutes = minutes < 10 ? '0' + minutes : minutes;
-                    let strTime =
-                        hours + ':' + minutes + ' ' + seconds + 's ' + ampm;
-                    return (
-                        date.getMonth() +
-                        1 +
-                        '/' +
-                        date.getDate() +
-                        '/' +
-                        date.getFullYear() +
-                        ' ' +
-                        strTime
-                    );
-                }
+            function youtubePlay() {
+                _$youtubeIframe.innerHTML = "<div id='player'></div>";
+                _$scriptTag.src = 'https://www.youtube.com/iframe_api';
+                _$insertScript.parentNode.insertBefore(
+                    _$scriptTag,
+                    _$insertScript,
+                );
+            }
 
-                let date = new Date();
-                let dateFormat = formatDate(date);
-
-                document.querySelector('.log').innerHTML =
-                    'log: v1 ' + dateFormat;
-                document.querySelector('.log').style.filter =
-                    'hue-rotate(' + date.getSeconds() + 'rad)';
-            })();
+            _$btnYoutube.addEventListener('touchstart', youtubePlay);
         </script>
     </body>
 </html>
