--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
                     events: {
                         onStateChange: onPlayerStateChange,
                     },
+                    playerVars: {
+                        autohide: 1,
+                        modestbranding: 1,
+                        showinfo: 0,
+                        rel: 0,
+                        controls: 0,
+                        playsinline: 1,
+                        fs: 0,
+                    },
                 });
             }
 
