--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                         rel: 0,
                         controls: 0,
                         playsinline: 1,
+                        autoplay: 1,
                         fs: 0,
                     },
                 });
