--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                         controls: 0,
                         playsinline: 1,
                         autoplay: 1,
-                        mute: 1,
                         fs: 0,
                     },
                 });
@@ -97,9 +96,9 @@
             function onPlayerStateChange(event) {
                 if (event.data == YT.PlayerState.PLAYING && !_done) {
                     _done = true;
-                    setTimeout(() => {
-                        _player.unMute();
-                    }, 5400);
+                    // setTimeout(() => {
+                    //     _player.unMute();
+                    // }, 5400);
                 }
             }
 
@@ -111,6 +110,7 @@
 
             function playVideo() {
                 _player.playVideo();
+                _player.mute();
                 _$btnYoutube.style.display = 'none';
                 _$btnYoutubeStop.style.display = 'block';
             }
