--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             function onPlayerStateChange(event) {
                 if (event.data == YT.PlayerState.PLAYING && !_done) {
                     _done = true;
+                    _$btnYoutube.style.display = 'none';
+                    _$btnYoutubeStop.style.display = 'block';
                     setTimeout(() => {
                         _player.unMute();
                     }, 5400);
@@ -118,6 +120,7 @@
                 _player.playVideo();
                 _$btnYoutube.style.display = 'none';
                 _$btnYoutubeStop.style.display = 'block';
+                _$btnYoutubeStop.focus();
             }
 
             _$btnYoutube.addEventListener('click', playVideo);
