--- a/index.html
+++ b/index.html
@@ -47,20 +47,32 @@
                 z-index: 1;
             }
             .youtubeButtonStop {
-                display: none;
+                display: flex;
                 justify-content: center;
                 align-items: center;
                 position: absolute;
+                visibility: hidden;
                 left: 0;
                 top: 0;
                 z-index: 5;
                 width: 100%;
                 height: 100%;
                 opacity: 0;
+                -webkit-transition: 0.4s;
+                transition: 0.4s;
+                -webkit-transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+                transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+                background: rgba(0, 0, 0, 0.9);
             }
             .youtubeButtonStop.active {
-                display: flex;
+                visibility: visible;
                 opacity: 1;
+            }
+            .youtubePause {
+                width: 5vw;
+                height: 5vw;
+                background: rgba(255, 255, 255, 0.8);
+                cursor: pointer;
             }
         </style>
     </head>
@@ -69,7 +81,7 @@
             <div class="youtubeWrap">
                 <div class="youtubeButton"></div>
                 <div class="youtubeButtonStop">
-                    <div style="width:100px; height:100px; background:black;"></div>
+                    <div class="youtubePause"></div>
                 </div>
                 <div class="youtubeStop"></div>
                 <div class="youtubePlayer">
