--- a/index.html
+++ b/index.html
@@ -69,10 +69,27 @@
                 opacity: 1;
             }
             .youtubePause {
-                width: 5vw;
-                height: 5vw;
-                background: rgba(255, 255, 255, 0.8);
+                position: relative;
+                width: 8vw;
+                height: 8vw;
+                box-sizing: border-box;
                 cursor: pointer;
+            }
+            .youtubePause:before,
+            .youtubePause:after {
+                content: '';
+                display: block;
+                position: absolute;
+                left: 2.2vw;
+                top: 2vw;
+                width: 1vw;
+                height: 4vw;
+                box-sizing: border-box;
+                background: #fefefe;
+            }
+            .youtubePause:after {
+                left: auto;
+                right: 2.2vw;
             }
         </style>
     </head>
@@ -156,7 +173,7 @@
                 _$btnYoutubeStopButton.classList.add('active');
                 setTimeout(function() {
                     _$btnYoutubeStopButton.classList.remove('active');
-                }, 2500);
+                }, 1500);
             }
 
             _$btnYoutube.addEventListener('click', playVideo);
